--- a/js/package.json
+++ b/js/package.json
@@ -3,10 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
+    "eslint": "^8.40.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "flarum-tsconfig": "^1.0.2",
     "flarum-webpack-config": "^2.0.0",
     "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "flarum-tsconfig": "^1.0.2"
+    "webpack-cli": "^4.9.1"
   },
   "scripts": {
     "dev": "webpack --mode development --watch",
