--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   },
   "require": {
     "flarum/core": "^1.6.3",
-    "guzzlehttp/guzzle": "^6.0 || ^7.0"
+    "guzzlehttp/guzzle": "^6.0 || ^7.0",
+    "php": "^8.0"
   },
   "autoload": {
     "psr-4": {
