--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,14 +7,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@master
-      - uses: flarum/action-build@2
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Set up Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: "npm"
+          cache-dependency-path: js/package-lock.json
+
+      # Our action will install npm, cd into `./js`, run `npm run build` and
+      # `npm run build-typings`, then commit and upload any changes
+      - name: Build production JS
+        uses: flarum/action-build@2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          build_script: build # npm run build
-          build_typings_script: build-typings # npm run build-typings
-          test_script: test # npm run test
-          package_manager: npm # Use NPM, not Yarn
-          js_path: ./js
-          do_not_commit: false
-          commit_all_dirty: false
+          build_script: build
+          package_manager: npm
+          typings_script: build-typings
