--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,10 @@
 name: Flarum Build
 
-on: push
+on:
+  push:
+    branches:
+      - main
+
 
 jobs:
   build:
@@ -8,21 +12,21 @@ jobs:
 
     steps:
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Set up Node
-        uses: actions/setup-node@v2
+      - name: Restore npm cache
+        uses: actions/cache@v3
         with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: "npm"
-          cache-dependency-path: js/package-lock.json
-
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('js/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
       # Our action will install npm, cd into `./js`, run `npm run build` and
       # `npm run build-typings`, then commit and upload any changes
       - name: Build production JS
-        uses: flarum/action-build@2
+        uses: flarum/action-build@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           build_script: build
           package_manager: npm
-          typings_script: build-typings
+ 
