add(Collection|Extend): preparing for scalability
Only a simple practice in theory, will be changed subsequently

--- a/js/package.json
+++ b/js/package.json
@@ -17,5 +17,8 @@
   "scripts": {
     "dev": "webpack --mode development --watch",
     "build": "webpack --mode production"
+  },
+  "dependencies": {
+    "linkify-lite": "^2.0.1"
   }
 }
