--- a/js/package.json
+++ b/js/package.json
@@ -19,6 +19,7 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "flarum": "^0.1.0-beta.16",
     "linkify-lite": "^2.0.1"
   }
 }
