--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -9,6 +9,7 @@
       "shims.d.ts"
     ],
     "compilerOptions": {
+      "jsx": "preserve",
       // This will output typings to `dist-typings`
       "declarationDir": "./dist-typings",
       "baseUrl": ".",
