--- a/js/package.json
+++ b/js/package.json
@@ -4,12 +4,9 @@
   "private": true,
   "devDependencies": {
     "@types/mithril": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "eslint": "^8.44.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^16.0.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
     "flarum-tsconfig": "^1.0.2",
     "flarum-webpack-config": "^2.0.2",
     "webpack": "^5.88.1",
