--- a/js/package.json
+++ b/js/package.json
@@ -9,7 +9,7 @@
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "eslint": "^8.44.0",
-    "flarum-rspack-config": "^1.1.1",
+    "flarum-rspack-config": "^1.1.1-patch1",
     "flarum-tsconfig": "^1.0.2"
   },
   "scripts": {
